--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 
 /* Header Contents Style Code */
 header{width:10%; height:100%; background:#7c41f5; display:flex; flex-direction: column; justify-content: space-between; align-items: center; padding:30px 0;}
+header h2{width:30px; height:auto;}
+header h2 img{width:100%;}
 header a{color:#fff;}
 header .gnb{width:100%;}
 header .gnb a{width:100%; padding:15px 0; font-size:20px; display:flex; align-items: center; justify-content: center;}
