--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,13 @@ header .sign-out{font-size:20px;}
 /* Graph-ui Contents Style Code */
 .graph-ui{width:calc(55% - 20px); height:100%;}
 .graph-ui>div{width:100%; height:33.33%;border-radius:15px;}
-.graph-ui>div.intro{background:#ff9062;}
+.graph-ui>div.intro{background:#ff9062; padding:40px; display:flex; flex-direction: column; color:#fff; justify-content: center; position:relative; overflow:hidden;}
+.graph-ui>div.intro h2{font-size:28px; text-transform:uppercase; transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards;}
+.graph-ui>div.intro p{transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:0.5s;}
+.graph-ui>div.intro a{color:#fff; border:1px solid #fff; width:100px; text-align:center; padding:7px 0; margin-top:10px; transition:all 0.4s; font-size:12px; transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:1s;}
+.graph-ui>div.intro a:hover{background:#fff; color:#ff9062;}
+.graph-ui>div.intro i{position:absolute; font-size:150px; right:-20px; top:-5px; opacity:0.3;}
+
 .graph-ui>div.each-pofol{padding:20px 0;}
 .graph-ui>div.each-pofol>div{width:100%; height:100%; border-radius:15px;}
 .graph-ui .each-pofol .each-title{width:100%; height:25%;}
@@ -27,4 +33,20 @@ header .sign-out{font-size:20px;}
 .graph-ui>div.total-pofol{border:1px solid #f7f7f7; box-shadow:0px 0px 3px #ccc; background:#fff;}
 
 /* Table-ui Contents Style Code */
-.table-ui{width:35%; height:100%; background:#222;}
+.table-ui{width:35%; height:100%; display:flex; flex-direction: column; justify-content: space-between;}
+.table-ui>div{width:100%; height:calc(50% - 5px); border:1px solid #f7f7f7; border-radius:15px; box-shadow:0px 0px 3px #ccc; background:#fff; padding:30px 20px;}
+/*.table-ui>div.each-contents{margin-top:10px;}*/
+.table-ui .tit-box, .each-btns{width:100%; height:auto; border-bottom:1px solid #ccc; display:flex; justify-content: space-between; padding:5px 0;}
+.table-ui .tit-box p{font-size:16px; font-weight:400; color:#7c41f5;}
+.table-ui .tit-box a:hover{text-decoration: underline;}
+.table-ui .con-details{margin-top:5px;}
+.table-ui .con-details li{display:flex; padding:5px 0; align-items: center;}
+.table-ui .con-details li i{width:50px; height:50px; border:1px solid #ccc; border-radius:50%; display:flex; align-items: center; justify-content: center; font-size:20px; color:#7c41f5; margin-right:10px;}
+.table-ui .each-contents .con-details li i{color:#ff9062;}
+.table-ui .con-txt{}
+.table-ui .con-txt p{color:#333; line-height:1.4;}
+/* .table-ui .new-update .con-txt p a{overflow:hidden; white-space:nowrap; text-overflow: ellipsis; display:block;} */
+.table-ui .con-txt p a:hover{text-decoration: underline;}
+.table-ui .con-txt em{font-style:normal; font-size:12px;}
+.table-ui .each-contents .each-btns button{width:25%; display:block; border:1px solid #fff; background:#ff9062; color:#fff; padding:10px 0; font-weight:400; border-radius:10px;}
+.table-ui .each-contents .each-btns button.active{color:#ff9062; background:#fff; border:1px solid #ff9062}
