--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@font-face { 
+  font-family: 'todo-logo-for-lecture'; 
+  src: url('/schedule/font/todo-logo-for-lecture-Regular.eot') format('embedded-opentype'), 
+  url('/schedule/font/todo-logo-for-lecture-Regular.woff2') format('woff2'), 
+  url('/schedule/font/todo-logo-for-lecture-Regular.woff') format('woff'), 
+  url('/schedule/font/todo-logo-for-lecture-Regular.ttf') format('truetype');
+}
+
+.custom-font { 
+  display: inline-block; 
+  font-family: todo-logo-for-lecture; 
+  font-size: inherit; 
+  text-rendering: auto; 
+  font-style:normal;
+  font-size:70px;
+  line-height:0;
+} 
+
+.custom-font:before { content: "\0530";}
+
 /* Wrapper Style Code */
 .wrapper{width:100%; height:100vh; background:#eee; display:flex; align-items: center; justify-content: center; min-height:768px;}
 
@@ -14,21 +34,39 @@ header .gnb{width:100%;}
 header .gnb a{width:100%; padding:15px 0; font-size:20px; display:flex; align-items: center; justify-content: center;}
 header .sign-out{font-size:20px;}
 
+/* Mobile Menu Icon Style Code */
+.mobile-menu{width:20px; height:20px; position:relative; transition:all 0.4s; display:none;}
+.mobile-menu span{background:#fff; display:block; position:absolute;}
+.mobile-menu span:nth-child(1){width:100%; height:2px; top:50%; transform:translateY(-50%);}
+.mobile-menu span:nth-child(2){width:2px; height:100%; left:50%; transform:translateX(-50%);}
+.mobile-menu.active{transform:rotate(135deg);}
+
 /* Graph-ui Contents Style Code */
 .graph-ui{width:calc(55% - 20px); height:100%;}
 .graph-ui>div{width:100%; height:33.33%;border-radius:15px;}
-.graph-ui>div.intro{background:#ff9062; padding:40px; display:flex; flex-direction: column; color:#fff; justify-content: center; position:relative; overflow:hidden;}
-.graph-ui>div.intro h2{font-size:28px; text-transform:uppercase; transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards;}
-.graph-ui>div.intro p{transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:0.5s;}
-.graph-ui>div.intro a{color:#fff; border:1px solid #fff; width:100px; text-align:center; padding:7px 0; margin-top:10px; transition:all 0.4s; font-size:12px; transform:translateY(25px); opacity:0; animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:1s;}
-.graph-ui>div.intro a:hover{background:#fff; color:#ff9062;}
-.graph-ui>div.intro i{position:absolute; font-size:150px; right:-20px; top:-5px; opacity:0.3;}
+.graph-ui div.intro{ color:#fff; position:relative; overflow:hidden; height:100%!important;}
+
+.graph-ui div.intro .slide-box{padding:40px 50px; height:100%; display:flex; flex-direction: column; justify-content: center; position:relative;}
+.graph-ui div.intro .slide-box:nth-child(2){background:#ff9062;}
+.graph-ui div.intro .slide-box:nth-child(3){background:#7c41f5;}
+.graph-ui div.intro .slide-box:nth-child(4){background:#3acbe8;}
+.graph-ui div.intro .slide-box:nth-child(5){background:cyan}
+
+.graph-ui div.intro h2{font-size:28px; text-transform:uppercase; transform:translateY(25px); opacity:0;}
+.graph-ui div.intro p{transform:translateY(25px); opacity:0;}
+.graph-ui div.intro a{color:#fff; border:1px solid #fff; width:100px; text-align:center; padding:7px 0; margin-top:10px; transition:all 0.4s; font-size:12px; transform:translateY(25px); opacity:0; }
+.graph-ui div.intro a:hover{background:#fff; color:#ff9062;}
+.graph-ui div.intro i{position:absolute; font-size:150px; right:-20px; top:-5px; opacity:0.3;}
+
+.graph-ui div.intro .slide-box.active h2{animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:0.3s;}
+.graph-ui div.intro .slide-box.active p{animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:0.8s;}
+.graph-ui div.intro .slide-box.active a{animation:fade-up-01 0.5s 1; animation-fill-mode: forwards; animation-delay:1.3s;}
 
 .graph-ui>div.each-pofol{padding:20px 0;}
 .graph-ui>div.each-pofol>div{width:100%; height:100%; border-radius:15px;}
 .graph-ui .each-pofol .each-title{width:100%; height:25%;}
 .graph-ui .each-pofol .each-graph{width:100%; height:75%; display:flex; justify-content: space-between;}
-.graph-ui .each-pofol .each-graph div{height:100%; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc;}
+.graph-ui .each-pofol .each-graph div{height:100%; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc; display:flex; align-items: center; justify-content: center;}
 
 .graph-ui>div.total-pofol{border:1px solid #f7f7f7; box-shadow:0px 0px 3px #ccc; background:#fff;}
 
