--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
 
 .custom-font { 
   display: inline-block; 
-  font-family: todo-logo-for-lecture; 
-  font-size: inherit; 
+  _font: normal normal normal 14px/1 todo-logo-for-lecture; 
+  font-family:todo-logo-for-lecture;
+  font-size: 80px;
+  line-height:0; 
   text-rendering: auto; 
   font-style:normal;
-  font-size:70px;
-  line-height:0;
-} 
+  font-weight:normal;
+}
 
 .custom-font:before { content: "\0530";}
 
@@ -47,10 +48,10 @@ header .sign-out{font-size:20px;}
 .graph-ui div.intro{ color:#fff; position:relative; overflow:hidden; height:100%!important;}
 
 .graph-ui div.intro .slide-box{padding:40px 50px; height:100%; display:flex; flex-direction: column; justify-content: center; position:relative;}
-.graph-ui div.intro .slide-box:nth-child(2){background:#ff9062;}
-.graph-ui div.intro .slide-box:nth-child(3){background:#7c41f5;}
-.graph-ui div.intro .slide-box:nth-child(4){background:#3acbe8;}
-.graph-ui div.intro .slide-box:nth-child(5){background:cyan}
+.graph-ui div.intro .slide-box:nth-child(1){background:#ff9062;}
+.graph-ui div.intro .slide-box:nth-child(2){background:#7c41f5;}
+.graph-ui div.intro .slide-box:nth-child(3){background:#3acbe8;}
+.graph-ui div.intro .slide-box:nth-child(4){background:cyan}
 
 .graph-ui div.intro h2{font-size:28px; text-transform:uppercase; transform:translateY(25px); opacity:0;}
 .graph-ui div.intro p{transform:translateY(25px); opacity:0;}
