--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,18 +1,16 @@
-
 .chart {
   position: relative;
   display: inline-block;
   width: 110px;
   height: 110px;
-  _margin-top: 50px;
-  _margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   text-align: center;
 }
 .chart canvas {
   position: absolute;
   top: 0;
   left: 0;
-  width:100%!important;
 }
 .percent {
   display: inline-block;
@@ -25,7 +23,3 @@
   font-size: .8em;
 }
 
-.span6 {
-  float: left;
-  width: 50%;
-}
