--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 .custom-font:before { content: "\0530";}
 
 /* Wrapper Style Code */
-.wrapper{width:100%; height:100vh; background:#eee; display:flex; align-items: center; justify-content: center; min-height:768px;}
+.wrapper{width:100%; height:100vh; background:#eee; display:flex; align-items: center; justify-content: center; min-height:796px;}
 
 /* Main Contents Box Style Code */
 .dashboard{width:90%; max-width:1280px; height:90%; background:#f9f9f9; box-shadow:0 0 128px 0 rgb(0 0 0 / 10%), 0 32px 64px -48px rgb(0 0 0 / 50%); border-radius:15px; display:flex; padding:10px; justify-content: space-between;}
@@ -67,9 +67,26 @@ header .sign-out{font-size:20px;}
 .graph-ui>div.each-pofol>div{width:100%; height:100%; border-radius:15px;}
 .graph-ui .each-pofol .each-title{width:100%; height:25%;}
 .graph-ui .each-pofol .each-graph{width:100%; height:75%; display:flex; justify-content: space-between;}
-.graph-ui .each-pofol .each-graph div{height:100%; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc; display:flex; align-items: center; justify-content: center;}
+.graph-ui .each-pofol .each-graph div{height:100%; min-height:150px; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc; display:flex; align-items: center; justify-content: center; flex-direction: column; position:relative;}
+.graph-ui .each-pofol .each-graph div b{font-weight:300; margin-top:10px; font-size:12px;}
+.graph-ui .each-pofol .each-graph div i{position:absolute; font-size:45px; opacity:0.1; top:50%; left:50%; transform:translate(-50%, -50%); display:none;}
 
-.graph-ui>div.total-pofol{border:1px solid #f7f7f7; box-shadow:0px 0px 3px #ccc; background:#fff;}
+.graph-ui .each-pofol .each-graph div i.fa-database{color:#7c41f5;}
+.graph-ui .each-pofol .each-graph div i.fa-thermometer-half{color:#ff9062;}
+.graph-ui .each-pofol .each-graph div i.fa-clone{color:#3acbe8;}
+.graph-ui .each-pofol .each-graph div i.fa-bar-chart-o{color:#69c;}
+
+.graph-ui>div.total-pofol{border:1px solid #f7f7f7; box-shadow:0px 0px 3px #ccc; background:#fff; display:flex;}
+.graph-ui>div.total-pofol>div{height:100%;}
+.graph-ui>div.total-pofol div.total-chart{width:40%; display:flex; align-items: center; justify-content: center; flex-direction: column;}
+
+div.total-chart{padding:10px 0;}
+div.total-chart .chart{width:100%; height:100%; display:flex; align-items: center; justify-content: center; flex-direction: column;}
+div.total-chart .percent{line-height:0; font-size:18px; font-weight:300;}
+div.total-chart .chart canvas{width:auto!important; left:50%; top:50%; transform:translate(-50%, -50%);}
+
+.graph-ui>div.total-pofol div.total-chart h3{font-weight:300; margin-top:15px;}
+.graph-ui>div.total-pofol div.total-txt{width:60%;}
 
 /* Table-ui Contents Style Code */
 .table-ui{width:35%; height:100%; display:flex; flex-direction: column; justify-content: space-between;}
