--- a/css/media.css
+++ b/css/media.css
@@ -18,8 +18,12 @@
   .graph-ui>div.each-pofol{height:26%;}
   .graph-ui>div.total-pofol{height:40%;}
 
+  /* Pie Chart Style Code */
   .chart{width:100%; height:100%;}
   .chart canvas{width:85%!important; height:auto!important; top:50%; left:50%; transform:translate(-50%, -50%);}
+  .graph-ui .each-pofol .each-graph div{min-height:auto;}
+  .graph-ui .each-pofol .each-graph div b{display:none;}
+  .graph-ui .each-pofol .each-graph div i{display:block;}
 }
 
 @media screen and (max-width:768px){
@@ -42,6 +46,7 @@
 
   /* Table-ui Contents Style Code */
   .table-ui{height:auto; margin-top:10px; width:100%;}
+
 
   .chart{width:100%; height:100%;}
   .chart canvas{width:auto!important; height:75%!important; top:50%; left:50%; transform:translate(-50%, -50%);}
