--- a/css/media.css
+++ b/css/media.css
@@ -11,6 +11,9 @@
 
   /* Table-ui Contents Style Code */
   .table-ui{height:calc(90% - 10px); margin-top:10px; width:40%;}
+
+  /* Pie Chart Style Code */
+  .chart{width:90px; height:90px;}
 }
 
 @media screen and (max-width:950px){
@@ -20,10 +23,13 @@
 
   /* Pie Chart Style Code */
   .chart{width:100%; height:100%;}
-  .chart canvas{width:85%!important; height:auto!important; top:50%; left:50%; transform:translate(-50%, -50%);}
+  .chart canvas{_width:85%!important; _height:auto!important; top:50%; left:50%; transform:translate(-50%, -50%);}
   .graph-ui .each-pofol .each-graph div{min-height:auto;}
   .graph-ui .each-pofol .each-graph div b{display:none;}
   .graph-ui .each-pofol .each-graph div i{display:block;}
+
+  .graph-ui>div.total-pofol div.total-chart{width:50%;}
+  div.total-txt{width:50%;}
 }
 
 @media screen and (max-width:768px){
@@ -47,9 +53,14 @@
   /* Table-ui Contents Style Code */
   .table-ui{height:auto; margin-top:10px; width:100%;}
 
+  div.total-txt{padding-left:30px;}
+  div.total-txt h3{font-size:16px;}
+  div.total-txt p{font-size:14px;}
+  div.total-txt button{font-size:12px;}
+
 
   .chart{width:100%; height:100%;}
-  .chart canvas{width:auto!important; height:75%!important; top:50%; left:50%; transform:translate(-50%, -50%);}
+  .chart canvas{_width:auto!important; _height:75%!important; top:50%; left:50%; transform:translate(-50%, -50%);}
 }
 
 @media screen and (max-width:400px){
@@ -69,5 +80,11 @@
 
   .graph-ui .each-pofol .each-graph{flex-wrap:wrap;}
   .graph-ui .each-pofol .each-graph div{width:calc(50% - 5px); margin-top:10px;}
+
+  .graph-ui>div.total-pofol{height:350px; display:block;}
+  .graph-ui>div.total-pofol div.total-chart,
+  .graph-ui>div.total-pofol div.total-txt{width:100%; height:50%; padding:0; text-align:center;}
+  .graph-ui>div.total-pofol div.total-txt button{margin:20px auto;}
+  
 }
 
