--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header .sign-out{font-size:20px;}
 .graph-ui>div.each-pofol>div{width:100%; height:100%; border-radius:15px;}
 .graph-ui .each-pofol .each-title{width:100%; height:25%;}
 .graph-ui .each-pofol .each-graph{width:100%; height:75%; display:flex; justify-content: space-between;}
-.graph-ui .each-pofol .each-graph div{height:100%; min-height:150px; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc; display:flex; align-items: center; justify-content: center; flex-direction: column; position:relative;}
+.graph-ui .each-pofol .each-graph div{height:100%; border:1px solid #f7f7f7; width:calc(25% - 7.5px); border-radius:15px; background:#fff;box-shadow:0px 0px 3px #ccc; display:flex; align-items: center; justify-content: center; flex-direction: column; position:relative;}
 .graph-ui .each-pofol .each-graph div b{font-weight:300; margin-top:10px; font-size:12px;}
 .graph-ui .each-pofol .each-graph div i{position:absolute; font-size:45px; opacity:0.1; top:50%; left:50%; transform:translate(-50%, -50%); display:none;}
 
@@ -78,12 +78,18 @@ header .sign-out{font-size:20px;}
 
 .graph-ui>div.total-pofol{border:1px solid #f7f7f7; box-shadow:0px 0px 3px #ccc; background:#fff; display:flex;}
 .graph-ui>div.total-pofol>div{height:100%;}
-.graph-ui>div.total-pofol div.total-chart{width:40%; display:flex; align-items: center; justify-content: center; flex-direction: column;}
+.graph-ui>div.total-pofol div.total-chart{width:40%; display:flex; align-items: center; justify-content: center; flex-direction: column; padding:10px 0;}
 
-div.total-chart{padding:10px 0;}
+/* div.total-chart{padding:10px 0;} */
 div.total-chart .chart{width:100%; height:100%; display:flex; align-items: center; justify-content: center; flex-direction: column;}
-div.total-chart .percent{line-height:0; font-size:18px; font-weight:300;}
+div.total-chart .percent{line-height:0; font-size:22px; font-weight:600; color:#7c41f5;}
 div.total-chart .chart canvas{width:auto!important; left:50%; top:50%; transform:translate(-50%, -50%);}
+
+div.total-txt{padding:20px 0; display:flex; flex-direction: column; justify-content: center;}
+div.total-txt h3{font-size:20px; font-weight:400; padding:0 0 5px 0; color:#555; border-bottom:1px solid #ccc;}
+div.total-txt p{font-weight:300; font-size:16px; padding:10px 0;}
+div.total-txt button{border:1px solid #7c41f5; background:#fff; padding:5px 0px; color:#555; width:150px; transition:all 0.4s;}
+div.total-txt button:hover{background:#7c41f5; color:#fff;}
 
 .graph-ui>div.total-pofol div.total-chart h3{font-weight:300; margin-top:15px;}
 .graph-ui>div.total-pofol div.total-txt{width:60%;}
