--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,9 @@
 
   /* Pie Chart Style Code */
   .chart{width:90px; height:90px;}
+
+  /* Insert Form Page Style Code */
+  .graph-ui .input-con textarea{height:200px;}
 }
 
 @media screen and (max-width:950px){
@@ -30,6 +33,10 @@
 
   .graph-ui>div.total-pofol div.total-chart{width:50%;}
   div.total-txt{width:50%;}
+
+  /* Insert Form Page Style Code */
+  .graph-ui>div.input-box{height:calc(60% - 10px);}
+  .graph-ui .input-con textarea{height:180px;}
 }
 
 @media screen and (max-width:768px){
@@ -86,5 +93,12 @@
   .graph-ui>div.total-pofol div.total-txt{width:100%; height:50%; padding:0; text-align:center;}
   .graph-ui>div.total-pofol div.total-txt button{margin:20px auto;}
   
+  /* Insert Form Page Style Code */
+  .graph-ui>div.input-box{padding:20px 10px;}
+  .graph-ui .title-box h3{font-size:16px;}
+  .graph-ui .input-box .input-tit input{font-size:12px;}
+  .graph-ui .input-box .input-tit select{font-size:12px;}
+  .graph-ui .input-con textarea{font-size:12px;}
+  .graph-ui .btns button{font-size:12px; padding:8px 15px;}
 }
 
