--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ div.total-txt button:hover{background:#7c41f5; color:#fff;}
 /******************/
 /* 3. 모달 박스 CSS 작성 => index.js 135번줄 */
 /* The Modal (background) */
-.modal {_display: none; /* Hidden by default */position: fixed; /* Stay in place */
+.modal {display: none; /* Hidden by default */position: fixed; /* Stay in place */
 z-index: 999; /* Sit on top */left: 0;top: 0;width: 100%; /* Full width */height: 100%; /* Full height */overflow: auto; /* Enable scroll if needed */background-color: rgb(0,0,0); /* Fallback color */background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
